# j4-dmenu-desktop

./: .clang-format  .gitignore  .travis.yml  BUILDING.md  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  HOW-TO-RELEASE  LICENSE  PACKAGING.md  README.md  iwyu-driver  iwyu_supplementary_mapping.imp  j4-dmenu-desktop.1  meson-setup.sh  meson.build  meson.options  muon_fmt.ini  version.txt
etc/: README.md  _j4-dmenu-desktop  complgen  j4-dmenu-desktop  j4-dmenu-desktop.fish  meson.build
src/: AppManager.cc  AppManager.hh  Application.cc  Application.hh  ApplicationRunner.cc  ApplicationRunner.hh  Applications.hh  CMDLineAssembler.cc  CMDLineAssembler.hh  CMDLineTerm.cc  CMDLineTerm.hh  Dmenu.cc  Dmenu.hh  DynamicCompare.hh  FSUtils.cc  FSUtils.hh  FieldCodes.cc  FieldCodes.hh  FileFinder.cc  FileFinder.hh  Formatters.cc  Formatters.hh  HistoryManager.cc  HistoryManager.hh  I3Exec.cc  I3Exec.hh  LineReader.cc  LineReader.hh  LocaleSuffixes.cc  LocaleSuffixes.hh  Main.hh  Notify.hh.in  NotifyBase.hh  NotifyInotify.cc  NotifyInotify.hh  NotifyKqueue.cc  NotifyKqueue.hh  SearchPath.cc  SearchPath.hh  Test.cc  (+24 more)
src/doc/: AppManager.md  README
subprojects/: catch2.wrap  emilk-loguru.wrap  fmt.wrap  spdlog.wrap
subprojects/packagefiles/: alacritty.patch  dont_install_catch2.patch  dont_install_fmt.patch  dont_install_loguru.patch
test_files/: history-variant2  old-history
test_files/a/applications/: chromium.desktop  firefox-changed.desktop  firefox.desktop  hidden.desktop
test_files/applications/: 17.desktop  bad-escape.desktop  caption.desktop  chromium-variant2.desktop  eagle.desktop  gimp.desktop  history  onlyShowIn.desktop  visible.desktop  web.desktop  whitespaces.desktop
test_files/b/applications/: chrome.desktop  safari.desktop
test_files/c/applications/: vivaldi.desktop
test_files/usr/share/applications/: collision.desktop  dummy
tests/: FSUtils.cc  FSUtils.hh  MainTest.cc  ShellUnquote.cc  ShellUnquote.hh  TestAppManager.cc  TestApplication.cc  TestApplicationRunner.cc  TestCMDLineAssembler.cc  TestCMDLineTerm.cc  TestDynamicCompare.cc  TestFieldCodes.cc  TestFileFinder.cc  TestFormatters.cc  TestHistoryManager.cc  TestI3Exec.cc  TestLocaleSuffixes.cc  TestNotify.cc  TestSearchPath.cc  TestUtilities.cc  bats.bats  bats_runner.sh  meson.build  skipped_test.sh
tests/bats_helpers/: dmenu_noselect_imitator.sh  dmenu_noselect_output_imitator.sh  dmenu_selected_imitator.sh  was_executed.sh
tests/system_tests/: README.md  conftest.py  j4dd_run_helper.py  meson.build  pyproject.toml  skipped_test.sh  system_test.py
tests/system_tests/helper_scripts/: dmenu_selected_imitator.sh  was_executed.sh
tests/test_files/: bad-history  double-history  history  old-double-history  too-new-history
tests/test_files/a/applications/: firefox-changed.desktop  firefox.desktop
tests/test_files/applications/: chromium-variant1.desktop  doubleeagle.desktop  escape.desktop  escaped.desktop  field_codes.desktop  hidden.desktop  invalid.desktop  missing-entries.desktop  notShowIn.desktop  web_browser.desktop  whitespaces.desktop  wine-#174.desktop  wine-powerpoint-viewer.desktop
tests/test_files/b/applications/: chrome.desktop  safari.desktop
tests/test_files/bats/applications/: gimp.desktop  htop.desktop
tests/test_files/bats/desktop-file-samples/rank-0/applications/: desktop-ID-collision.desktop
tests/test_files/bats/desktop-file-samples/rank-1/applications/: gimp.desktop  hidden.desktop
tests/test_files/c/applications/: vivaldi.desktop
tests/test_files/empty/: README
tests/test_files/pytest/applications/: eagle.desktop  selected.desktop
tests/test_files/pytest/args/applications/: selected.desktop
tests/test_files/pytest/b/applications/: .emptydir
tests/test_files/pytest/desktop-file-samples/rank-0/applications/: eagle.desktop
tests/test_files/pytest/desktop-file-samples/rank-1/applications/: onlyShowIn.desktop
tests/test_files/pytest/desktop-file-samples/rank-2/applications/: desktop-ID-collision.desktop
tests/test_files/usr/local/share/applications/: collision.desktop  couldbehidden.desktop
tests/test_files/usr/share/applications/: couldbehidden.desktop
