install_data('_j4-dmenu-desktop', install_dir: get_option('datadir') / 'zsh/site-functions')
install_data(
    'j4-dmenu-desktop.fish',
    install_dir: get_option('datadir') / 'fish/vendor_completions.d',
)
install_data(
  'j4-dmenu-desktop',
  install_dir: get_option('datadir') / 'bash-completion/completions',
)
